# jangle

./: .gitignore  README.md  pyproject.toml  sample.py  schedule.py
django_discord_bot/: __init__.py  discord.py  junk_drawer.py  lifespan.py  plumbing.py  sched.py  schedule.py
jangle/: __init__.py  apps.py  django.py  junk_drawer.py  plumbing.py  schedule.py  signals.py
